Unit testing of new resource system